--- a/tb-git.Rmd
+++ b/tb-git.Rmd
@@ -834,6 +834,12 @@ xargs -I {} -P 8 git clone --bare https://github.com/{}
 * Peek on pipeline data with `tee`
 * Log to standard error with `echo ... >&2`
 
+## Further reading
+* Chacon, Scott, and Ben Straub. *Pro Git*. Berkeley, CA New York, NY: Apress,Distributed to the Book trade worldwide by Spring Science+Business Media, 2014. Print.
+* Friedl, J. E., 2006. *Mastering Regular Expressions: Powerful Techniques for Perl and Other Tools*, 3rd Edition. O'Reilly Media, Sebastopol, CA.
+* Kernighan, Brian W., and Rob Pike. *The UNIX programming environment*. Englewood Cliffs, N.J: Prentice-Hall, 1984. Print.
+* Diomidis Spinellis. [Tools and techniques for analyzing product and process data](doi:10.1016/B978-0-12-411519-4.00007-0). In Tim Menzies, Christian Bird, and Thomas Zimmermann, editors, *The Art and Science of Analyzing Software Data*, pages 161-212. Morgan-Kaufmann, 2015.
+
 ## Licensing information
 
 ![Creative Commons](artwork/by-nc-sa.eu.png){width=10%}
